2010-01-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/include/rtems/bdbuf.h: Documentation.  Renamed
	RTEMS_BDBUF_STATE_EMPTY in RTEMS_BDBUF_STATE_FREE.  Renamed
	RTEMS_BDBUF_STATE_FRESH in RTEMS_BDBUF_STATE_EMPTY.  Renamed
	RTEMS_BDBUF_STATE_ACCESS in RTEMS_BDBUF_STATE_ACCESS_CACHED.  New
	state RTEMS_BDBUF_STATE_ACCESS_EMPTY.  Removed error field from
	rtems_bdbuf_buffer.
	* libblock/include/rtems/blkdev.h:  Documentation.  Removed error
	field from block device IO control.
	* libblock/src/bdbuf.c: Update for block device API change.  New block
	device driver error policies.  A transfer error or a write to a
	deleted disk will invalidate the block data now.  See test
	"libtests/block09".  A get and release sequence will no longer trigger
	a disk write.
	* libblock/src/flashdisk.c, libblock/src/nvdisk.c,
	libblock/src/ramdisk-driver.c: Update for block device API change.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 27
	* libblock/src/ramdisk-config.c: Coverity notes that the
	calloc() is a resource leak.  This is allocating memory for
	a RAM disk which will persist for the life of the system. RTEMS
	has no "de-initialize" driver call so there is no corresponding
	free(r).  Coverity is correct that it is never freed but this is
	not a problem.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libmisc/stackchk/check.c: Fix warning.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 12
	* libfs/src/imfs/memfile.c: Check for NULL return value.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 19
	Coverity Id 20
	Coverity Id 21
	* libfs/src/imfs/imfs_link.c, libfs/src/imfs/imfs_load_tar.c,
	libfs/src/imfs/imfs_mknod.c: Add comment to explain allocation is
	for life of file, not scope of method.

2010-01-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	Coverity Id 12
	Coverity Id 13
	Coverity Id 14
	Coverity Id 15
	* libmisc/stackchk/check.c: Rewrote loop to avoid possible buffer